--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="fin">
   <div class="wave"></div></div>
 </div>
-<h1> <b> <i> LIFE IS ACTUALLY TOUGH ISHA <br>
-  BUT IT'S OKAY </i></b></h1>
+<h1> <b> <i> LIFE IS ACTUALLY TOUGH PEOPLE <br>
+  BUT IT'S OKAY IN THE END <3 </i></b></h1>
 </body>
 </html>
